--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,7 @@ permissions:
 
 env:
   REGISTRY: ghcr.io
-  # Ensure this matches your GitHub username/repo-name lowercased 
-  IMAGE_NAME: ${{ github.repository }} 
+  IMAGE_NAME: rohansasidharan/cloud-formation 
 
 jobs:
   build-and-deploy:
